Dummy_Package_for_scratch_org/main/default/objects/Copado_License__c/Copado_License__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Copado License</label>
</CustomObject>