Dummy_Package_for_scratch_org/main/default/objects/Copado_License__c/fields/Enable_CAD__c.field-meta.xml
<CustomField>
    <fullName>Enable_CAD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable CAD</label>
    <type>Checkbox</type>
</CustomField>