Dummy_Package_for_scratch_org/main/default/objects/Copado_License__c/fields/Enable_CCM__c.field-meta.xml
<CustomField>
    <fullName>Enable_CCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable CCM</label>
    <type>Checkbox</type>
</CustomField>