Dummy_Package_for_scratch_org/main/default/objects/Copado_License__c/fields/Enable_Copado__c.field-meta.xml
<CustomField>
    <fullName>Enable_Copado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Copado</label>
    <type>Checkbox</type>
</CustomField>