Dummy_Package_for_scratch_org/main/default/objects/Copado_License__c/fields/Enable_CST__c.field-meta.xml
<CustomField>
    <fullName>Enable_CST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable CST</label>
    <type>Checkbox</type>
</CustomField>